@@ -28,6 +28,8 @@ Trunk (unreleased changes)
                problematic.
    HADOOP-2155 Method expecting HBaseConfiguration throws NPE when given Configuration
    HADOOP-2156 BufferUnderflowException for un-named HTableDescriptors
+   HADOOP-2161 getRow() is orders of magnitudes slower than get(), even on rows
+               with one column (Clint Morgan and Stack)
 
   IMPROVEMENTS
     HADOOP-2401 Add convenience put method that takes writable
